fix for extra space between pic and content

--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,12 @@ body{
     font-style: normal;
     color: white;
     background-color: rgb(0, 0, 0);
-    /* padding-left: 40px;
-    padding-right: 40px;
-    margin-top: 50px; */
     margin:0;
 }
 
   /***************************************
   
   *****************************************/
-/* 
-.top{
-
-} */
 
 header{
     padding: 20px 10px 10px 10px;
@@ -129,7 +122,6 @@ main img{
 
 .parallax {
     background-image: url("../images/hikecrop.jpg");
-  
     background-attachment: fixed;
     background-position: top;
     background-repeat: no-repeat;
@@ -143,7 +135,7 @@ main img{
 }
 
 .top div{
-    height: 300px;
+    /* height: 300px; */
     background-color: rgba(0, 0, 0, .5);
 }
 
